関数を実装

--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -276,10 +276,11 @@
   <ItemGroup>
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
+    <ClCompile Include="Code\StageData.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h" />
-    <ClInclude Include="Code\MapData.h" />
+    <ClInclude Include="Code\StageData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
