--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -417,6 +417,9 @@
     <ClCompile Include="Code\Player.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="Code\GameCamera.cpp">
+      <Filter>ソース ファイル\GameData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -430,6 +433,9 @@
     </ClInclude>
     <ClInclude Include="Code\Player.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\GameCamera.h">
+      <Filter>ヘッダー ファイル\GameData</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
