--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -287,6 +287,7 @@
     <ClInclude Include="Code\GameObject.h" />
     <ClInclude Include="Code\GameObjectManager.h" />
     <ClInclude Include="Code\Player.h" />
+    <ClInclude Include="Code\Skill.h" />
     <ClInclude Include="Code\StageData.h" />
     <ClInclude Include="Code\TestObject.h" />
   </ItemGroup>
