--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -281,6 +281,7 @@
     <ClCompile Include="Code\Player.cpp" />
     <ClCompile Include="Code\StageData.cpp" />
     <ClCompile Include="Code\TestObject.cpp" />
+    <ClCompile Include="Code\TestSkill.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameCamera.h" />
@@ -290,6 +291,7 @@
     <ClInclude Include="Code\Skill.h" />
     <ClInclude Include="Code\StageData.h" />
     <ClInclude Include="Code\TestObject.h" />
+    <ClInclude Include="Code\TestSkill.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
