--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -88,6 +88,12 @@
     <Filter Include="ヘッダー ファイル\GameData">
       <UniqueIdentifier>{09ab68a3-de20-44d0-96ab-85d9d1988bec}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\Skill">
+      <UniqueIdentifier>{cd58d2d6-c171-4290-b80e-e28b77d018e4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\Skill">
+      <UniqueIdentifier>{067b4dce-90b9-4763-ac00-4d13914559d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
@@ -423,6 +429,9 @@
     <ClCompile Include="Code\GameObjectManager.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="Code\TestSkill.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -444,7 +453,10 @@
       <Filter>ヘッダー ファイル\GameData</Filter>
     </ClInclude>
     <ClInclude Include="Code\Skill.h">
-      <Filter>ヘッダー ファイル\GameData</Filter>
+      <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\TestSkill.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
