--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -430,7 +430,7 @@
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
     <ClCompile Include="Code\TestSkill.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース ファイル\Skill</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
