--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -432,6 +432,9 @@
     <ClCompile Include="Code\GameObjectManager.cpp">
       <Filter>ソース ファイル\GameData</Filter>
     </ClCompile>
+    <ClCompile Include="Code\InputManager.cpp">
+      <Filter>ソース ファイル\GameData</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -457,6 +460,9 @@
     </ClInclude>
     <ClInclude Include="Code\TestSkill.h">
       <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\InputManager.h">
+      <Filter>ヘッダー ファイル\GameData</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
