--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -444,6 +444,15 @@
     <ClCompile Include="Code\Skill.cpp">
       <Filter>ソース ファイル\Skill</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Moglie.cpp">
+      <Filter>ソース ファイル\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\AppleBattle.cpp">
+      <Filter>ソース ファイル\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Apple.cpp">
+      <Filter>ソース ファイル\GameObject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -477,6 +486,15 @@
       <Filter>ヘッダー ファイル\GameData</Filter>
     </ClInclude>
     <ClInclude Include="Code\Cassette.h">
+      <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Moglie.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\AppleBattle.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Apple.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
