爆撃機と爆弾を出せるようにした

--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -276,12 +276,15 @@
   <ItemGroup>
     <ClCompile Include="Code\Apple.cpp" />
     <ClCompile Include="Code\AppleBattle.cpp" />
+    <ClCompile Include="Code\Bomb.cpp" />
+    <ClCompile Include="Code\Bomber.cpp" />
     <ClCompile Include="Code\Cassette.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
     <ClCompile Include="Code\GameObjectManager.cpp" />
     <ClCompile Include="Code\InputManager.cpp" />
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
+    <ClCompile Include="Code\MaterialDefence.cpp" />
     <ClCompile Include="Code\Moglie.cpp" />
     <ClCompile Include="Code\Player.cpp" />
     <ClCompile Include="Code\Skill.cpp" />
@@ -293,11 +296,14 @@
   <ItemGroup>
     <ClInclude Include="Code\Apple.h" />
     <ClInclude Include="Code\AppleBattle.h" />
+    <ClInclude Include="Code\Bomb.h" />
+    <ClInclude Include="Code\Bomber.h" />
     <ClInclude Include="Code\Cassette.h" />
     <ClInclude Include="Code\GameCamera.h" />
     <ClInclude Include="Code\GameObject.h" />
     <ClInclude Include="Code\GameObjectManager.h" />
     <ClInclude Include="Code\InputManager.h" />
+    <ClInclude Include="Code\MaterialDefence.h" />
     <ClInclude Include="Code\Moglie.h" />
     <ClInclude Include="Code\Player.h" />
     <ClInclude Include="Code\Skill.h" />
