--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -277,6 +277,7 @@
     <ClCompile Include="Code\Apple.cpp" />
     <ClCompile Include="Code\AppleBattle.cpp" />
     <ClCompile Include="Code\Cassette.cpp" />
+    <ClCompile Include="Code\CrashBreak.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
     <ClCompile Include="Code\GameObjectManager.cpp" />
     <ClCompile Include="Code\InputManager.cpp" />
@@ -294,6 +295,7 @@
     <ClInclude Include="Code\Apple.h" />
     <ClInclude Include="Code\AppleBattle.h" />
     <ClInclude Include="Code\Cassette.h" />
+    <ClInclude Include="Code\CrashBreak.h" />
     <ClInclude Include="Code\GameCamera.h" />
     <ClInclude Include="Code\GameObject.h" />
     <ClInclude Include="Code\GameObjectManager.h" />
