--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -453,6 +453,9 @@
     <ClCompile Include="Code\Apple.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
+    <ClCompile Include="Code\CrashBreak.cpp">
+      <Filter>ソース ファイル\Skill</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -496,6 +499,9 @@
     </ClInclude>
     <ClInclude Include="Code\Apple.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\CrashBreak.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
