--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -274,6 +274,8 @@
     <Font Include="Example\YomogiFont.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Code\Apple.cpp" />
+    <ClCompile Include="Code\AppleBattle.cpp" />
     <ClCompile Include="Code\AttackObject.cpp" />
     <ClCompile Include="Code\Cassette.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
@@ -282,6 +284,7 @@
     <ClCompile Include="Code\InputManager.cpp" />
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
+    <ClCompile Include="Code\Moglie.cpp" />
     <ClCompile Include="Code\Player.cpp" />
     <ClCompile Include="Code\Skill.cpp" />
     <ClCompile Include="Code\SkillManager.cpp" />
@@ -290,6 +293,8 @@
     <ClCompile Include="Code\TestSkill.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Code\Apple.h" />
+    <ClInclude Include="Code\AppleBattle.h" />
     <ClInclude Include="Code\AttackObject.h" />
     <ClInclude Include="Code\Cassette.h" />
     <ClInclude Include="Code\GameCamera.h" />
@@ -298,6 +303,7 @@
     <ClInclude Include="Code\GameScene.h" />
     <ClInclude Include="Code\InputManager.h" />
     <ClInclude Include="Code\Main.h" />
+    <ClInclude Include="Code\Moglie.h" />
     <ClInclude Include="Code\Player.h" />
     <ClInclude Include="Code\Skill.h" />
     <ClInclude Include="Code\SkillManager.h" />
