--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -277,6 +277,8 @@
     <ClCompile Include="Code\Apple.cpp" />
     <ClCompile Include="Code\AppleBattle.cpp" />
     <ClCompile Include="Code\AttackObject.cpp" />
+    <ClCompile Include="Code\Bomb.cpp" />
+    <ClCompile Include="Code\Bomber.cpp" />
     <ClCompile Include="Code\Cassette.cpp" />
     <ClCompile Include="Code\CrashBreak.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
@@ -285,6 +287,7 @@
     <ClCompile Include="Code\InputManager.cpp" />
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
+    <ClCompile Include="Code\MaterialDefence.cpp" />
     <ClCompile Include="Code\Moglie.cpp" />
     <ClCompile Include="Code\Player.cpp" />
     <ClCompile Include="Code\Skill.cpp" />
@@ -297,6 +300,8 @@
     <ClInclude Include="Code\Apple.h" />
     <ClInclude Include="Code\AppleBattle.h" />
     <ClInclude Include="Code\AttackObject.h" />
+    <ClInclude Include="Code\Bomb.h" />
+    <ClInclude Include="Code\Bomber.h" />
     <ClInclude Include="Code\Cassette.h" />
     <ClInclude Include="Code\CrashBreak.h" />
     <ClInclude Include="Code\GameCamera.h" />
@@ -305,6 +310,7 @@
     <ClInclude Include="Code\GameScene.h" />
     <ClInclude Include="Code\InputManager.h" />
     <ClInclude Include="Code\Main.h" />
+    <ClInclude Include="Code\MaterialDefence.h" />
     <ClInclude Include="Code\Moglie.h" />
     <ClInclude Include="Code\Player.h" />
     <ClInclude Include="Code\Skill.h" />
