--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -468,6 +468,15 @@
     <ClCompile Include="Code\CrashBreak.cpp">
       <Filter>ソース ファイル\Skill</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Bomber.cpp">
+      <Filter>ソース ファイル\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Bomb.cpp">
+      <Filter>ソース ファイル\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\MaterialDefence.cpp">
+      <Filter>ソース ファイル\Skill</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\GameObject.h">
@@ -522,6 +531,15 @@
       <Filter>ヘッダー ファイル\GameObject</Filter>
     </ClInclude>
     <ClInclude Include="Code\CrashBreak.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Bomb.h">
+      <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Bomber.h">
+      <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\MaterialDefence.h">
       <Filter>ヘッダー ファイル\Skill</Filter>
     </ClInclude>
   </ItemGroup>
