--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -276,10 +276,12 @@
   <ItemGroup>
     <ClCompile Include="Code\AttackObject.cpp" />
     <ClCompile Include="Code\Cassette.cpp" />
+    <ClCompile Include="Code\Finger.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
     <ClCompile Include="Code\GameObjectManager.cpp" />
     <ClCompile Include="Code\GameScene.cpp" />
     <ClCompile Include="Code\InputManager.cpp" />
+    <ClCompile Include="Code\Jihad1.cpp" />
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
     <ClCompile Include="Code\Player.cpp" />
@@ -292,11 +294,13 @@
   <ItemGroup>
     <ClInclude Include="Code\AttackObject.h" />
     <ClInclude Include="Code\Cassette.h" />
+    <ClInclude Include="Code\Finger.h" />
     <ClInclude Include="Code\GameCamera.h" />
     <ClInclude Include="Code\GameObject.h" />
     <ClInclude Include="Code\GameObjectManager.h" />
     <ClInclude Include="Code\GameScene.h" />
     <ClInclude Include="Code\InputManager.h" />
+    <ClInclude Include="Code\Jihad1.h" />
     <ClInclude Include="Code\Main.h" />
     <ClInclude Include="Code\Player.h" />
     <ClInclude Include="Code\Skill.h" />
