--- a/GameBattle/GameBattle/GameBattle.vcxproj.filters
+++ b/GameBattle/GameBattle/GameBattle.vcxproj.filters
@@ -465,9 +465,6 @@
     <ClCompile Include="Code\Apple.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="Code\CrashBreak.cpp">
-      <Filter>ソース ファイル\Skill</Filter>
-    </ClCompile>
     <ClCompile Include="Code\Bomber.cpp">
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
@@ -475,6 +472,12 @@
       <Filter>ソース ファイル\GameObject</Filter>
     </ClCompile>
     <ClCompile Include="Code\MaterialDefence.cpp">
+      <Filter>ソース ファイル\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\Explosion.cpp">
+      <Filter>ソース ファイル\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\ClashBreak.cpp">
       <Filter>ソース ファイル\Skill</Filter>
     </ClCompile>
   </ItemGroup>
@@ -530,9 +533,6 @@
     <ClInclude Include="Code\Apple.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Code\CrashBreak.h">
-      <Filter>ヘッダー ファイル\Skill</Filter>
-    </ClInclude>
     <ClInclude Include="Code\Bomb.h">
       <Filter>ヘッダー ファイル\GameObject</Filter>
     </ClInclude>
@@ -540,6 +540,12 @@
       <Filter>ヘッダー ファイル\GameObject</Filter>
     </ClInclude>
     <ClInclude Include="Code\MaterialDefence.h">
+      <Filter>ヘッダー ファイル\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Explosion.h">
+      <Filter>ヘッダー ファイル\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\ClashBreak.h">
       <Filter>ヘッダー ファイル\Skill</Filter>
     </ClInclude>
   </ItemGroup>
