--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -283,11 +283,13 @@
     <ClCompile Include="Code\Cassette.cpp" />
     <ClCompile Include="Code\ClashBreak.cpp" />
     <ClCompile Include="Code\Explosion.cpp" />
+    <ClCompile Include="Code\EyeBall.cpp" />
     <ClCompile Include="Code\FE.cpp" />
     <ClCompile Include="Code\GameCamera.cpp" />
     <ClCompile Include="Code\GameObjectManager.cpp" />
     <ClCompile Include="Code\GameScene.cpp" />
     <ClCompile Include="Code\InputManager.cpp" />
+    <ClCompile Include="Code\Jihad2.cpp" />
     <ClCompile Include="Code\Main.cpp" />
     <ClCompile Include="Code\GameObject.cpp" />
     <ClCompile Include="Code\MaterialDefence.cpp" />
@@ -297,6 +299,7 @@
     <ClCompile Include="Code\Robot.cpp" />
     <ClCompile Include="Code\Skill.cpp" />
     <ClCompile Include="Code\SkillManager.cpp" />
+    <ClCompile Include="Code\SmallEyeBall.cpp" />
     <ClCompile Include="Code\StageData.cpp" />
     <ClCompile Include="Code\TestObject.cpp" />
     <ClCompile Include="Code\TestSkill.cpp" />
@@ -312,12 +315,14 @@
     <ClInclude Include="Code\Cassette.h" />
     <ClInclude Include="Code\ClashBreak.h" />
     <ClInclude Include="Code\Explosion.h" />
+    <ClInclude Include="Code\EyeBall.h" />
     <ClInclude Include="Code\FE.h" />
     <ClInclude Include="Code\GameCamera.h" />
     <ClInclude Include="Code\GameObject.h" />
     <ClInclude Include="Code\GameObjectManager.h" />
     <ClInclude Include="Code\GameScene.h" />
     <ClInclude Include="Code\InputManager.h" />
+    <ClInclude Include="Code\Jihad2.h" />
     <ClInclude Include="Code\Main.h" />
     <ClInclude Include="Code\MaterialDefence.h" />
     <ClInclude Include="Code\Mine.h" />
@@ -326,6 +331,7 @@
     <ClInclude Include="Code\Robot.h" />
     <ClInclude Include="Code\Skill.h" />
     <ClInclude Include="Code\SkillManager.h" />
+    <ClInclude Include="Code\SmallEyeBall.h" />
     <ClInclude Include="Code\StageData.h" />
     <ClInclude Include="Code\TestObject.h" />
     <ClInclude Include="Code\TestSkill.h" />
