--- a/GameBattle/GameBattle/GameBattle.vcxproj
+++ b/GameBattle/GameBattle/GameBattle.vcxproj
@@ -306,6 +306,7 @@
     <ClCompile Include="Code\Skill.cpp" />
     <ClCompile Include="Code\SkillManager.cpp" />
     <ClCompile Include="Code\SmallEyeBall.cpp" />
+    <ClCompile Include="Code\StageSelectScene.cpp" />
     <ClCompile Include="Code\StageData.cpp" />
     <ClCompile Include="Code\TestObject.cpp" />
     <ClCompile Include="Code\TestSkill.cpp" />
@@ -346,10 +347,12 @@
     <ClInclude Include="Code\SkillManager.h" />
     <ClInclude Include="Code\SmallEyeBall.h" />
     <ClInclude Include="Code\StageData.h" />
+    <ClInclude Include="Code\StageSelectScene.h" />
     <ClInclude Include="Code\TestObject.h" />
     <ClInclude Include="Code\TestSkill.h" />
     <ClInclude Include="Code\TitleScene.h" />
     <ClInclude Include="Code\TransportDefence.h" />
+    <ClInclude Include="StageSelectScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
